Solucionado error de elminar archivos

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -14,10 +14,9 @@
             <div class="col-xl-11 mx-auto vh-100">
                 <div class="row banner shadow rounded h-90 overflow-hidden">
                     <div class="col-lg-6 p-5 bg-white">
-                        <h1 class="text-blue">Documento finalizado</h1>
-                        <embed class="mx-auto embedPdf" src="<%= pdfPath%>" type="application/pdf" width="100%" height="auto" />
+                        <h1 class="text-blue"> <%= message %> </h1>
                         <div class="col-auto d-grid gap-2 my-3">
-                            <a href="/deletefiles" class="btn btn-primary mb-3">CONVERTIR OTRO ARCHIVO</a>
+                            <a href="/deletefiles" class="btn btn-primary mb-3">INTENTAR CON OTRO ARCHIVO</a>
                         </div>
                     </div>
                     <div class="col-6 image p-0 d-none d-lg-block">
