--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -48,6 +48,11 @@ body {
     background-color: var(--main-bg-color);
     border-color: var(--main-bg-color);
 }
+.embedPdf {
+    height: auto;
+    min-height: 300px;
+    max-height: 450px;
+}
 .drag-area{
     border: 5px dashed #ddd;
     border-radius: 1rem;
